src/theme/_landingpage.scss
// hero section
.hero {
    height: 105vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    background-color: var(--background-2);
    overflow: hidden;

    @include breakpoint(lg) {
        height: 100vh;
        padding: 0 2rem;
    }

    @include breakpoint(sm) {
        height: 97vh;
        padding: 0 .5rem;
    }

    &__section {
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: space-between;
        max-width: 1500px;
        position: absolute;
        top: 13rem;
        padding: 0 2rem;

        @include breakpoint(lg) {
            padding: 0 2rem;
        }

        @include breakpoint(md) {
            width: 100%;
            flex-direction: column;
        }

        @include breakpoint(sm) {
            top: 5rem;
        }
    }

    &__text {
        color: var(--text-white);
        width: 60%;
        z-index: 1;

        h1 {
            font-size: 120px;
        }

        h2 {
            font-size: 80px;
        }

        p:nth-child(3) {
            font-size: 25px;
        }

        p:nth-child(4) {
            font-size: 20px;
        }

        @include breakpoint(xl) {
            h1 {
                font-size: 70px;
            }

            h2 {
                font-size: 50px;
            }

            p:nth-child(3) {
                font-size: 25px;
            }

            p:nth-child(4) {
                font-size: 20px;
            }
        }

        @include breakpoint(lg) {
            h1 {
                font-size: 60px;
            }

            h2 {
                font-size: 40px;
            }

            p:nth-child(3) {
                font-size: 20px;
            }

            p:nth-child(4) {
                font-size: 16px;
            }
        }

        @include breakpoint(md) {
            width: 100%;
            text-align: center;

            h1 {
                font-size: 90px;
            }

            h2 {
                font-size: 50px;
            }

            p:nth-child(3) {
                font-size: 20px;
            }

            p:nth-child(4) {
                font-size: 16px;
            }
        }

    }

    &__wave {
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        z-index: 0;

        @include breakpoint(sm) {
            bottom: 1rem;
        }
    }

    &__image {
        height: 50vh;
        width: 50vw;

        img {
            height: 100%;
            width: 100%;
        }

        @include breakpoint(md) {
            height: 40vh;
            width: 40vw;
        }

        @include breakpoint(sm) {
            display: none;
        }
    }
}

// clients section
.clients {
    min-height: 100vh;
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--background-1);
    overflow: hidden;

    &__heading {
        max-width: 1500px;
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
        text-align: center;
        color: var(--text-grey);
        margin-top: 3rem;

        h1 {
            font-size: 40px;
        }

        @include breakpoint(lg) {
            padding: 0 .4rem;
        }
    }

    &__logos {
        width: 100vw;
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 1rem;
        max-width: 1500px;
        margin-top: 3rem;
        overflow-x: scroll;

        @include breakpoint(lg) {
            padding: 0 .4rem;
        }

        @include breakpoint(sm) {
            margin-top: .5rem;
            padding: 0 .6rem;
        }

        img {
            height: 6rem;
            width: 6rem;

            @include breakpoint(sm) {
                height: 3rem;
                width: 3rem;
            }
        }

        &::-webkit-scrollbar {
            display: none;
        }
    }

    &__middle {
        width: 100%;
        display: flex;
        align-items: center;
        flex-direction: column;
        justify-content: center;
        max-width: 1500px;
        margin-top: 7rem;
        color: var(--text-grey);

        @include breakpoint(lg) {
            padding: 0 2rem;
            text-align: center;
        }

        @include breakpoint(sm) {
            margin-top: 2rem;
            padding: 0 .6rem;
        }

        h1 {
            font-size: 60px;

            @include breakpoint(sm) {
                font-size: 30px;
            }
        }

        p {
            font-size: 20px;
        }
    }

    &__cards {
        width: 100%;
        height: 40vh;
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 3rem;
        max-width: 1500px;
        margin-top: 1rem;
        color: var(--text-grey);
        overflow-x: scroll;

        @include breakpoint(md) {
            padding: 0 2rem
        }
    }

    &__card {
        display: flex;
        align-items: center;
        flex-direction: column;
        justify-content: space-between;
        height: auto;
        max-height: 500px;
        min-height: 300px;
        min-width: 300px;
        width: 70%;
        gap: 1rem;
        box-shadow: 0px 1.39px 2.78px 0px #ABBED133;
        padding: 3rem;
        overflow: hidden;

        @include breakpoint(md) {
            padding: 1rem 0;
            justify-content: center;
            text-align: center;
        }

    }

    &__bottom {
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 3rem;
        max-width: 1500px;
        margin-top: 4rem;
    }

    &__image {
        height: 35vh;
        width: 30vw;
        overflow: hidden;
        flex: 1;

        img {
            height: 100%;
            width: 100%;
        }
    }

    &__hero {
        display: flex;
        align-items: start;
        flex-direction: column;
        gap: 1rem;
        width: 30vw;
        color: var(--text-grey);

        h2 {
            font-size: 32px;
        }
    }

}

// service section
.service {
    min-height: 100vh;
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--background-2);
}

// achievements
.achievements {
    min-height: 50vh;
    height: auto;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--background-2);

    &__body {
        display: flex;
        align-items: center;
        justify-content: space-between;
        width: 70%;
        max-width: 1500px;
        overflow: hidden;
    }

    &__header {
        flex: 1;
        display: flex;
        align-items: start;
        justify-content: space-between;
        flex-direction: column;
        gap: .5rem;

        p {
            font-size: 40px;
            font-weight: 600;
            color: var(--text-grey);
        }

        p span {
            color: var(--primary-color);
        }

        p:nth-child(3) {
            font-size: 18px;
            font-weight: 300;
        }
    }

    &__counts {
        max-width: 35%;
        width: 30%;
        display: grid;
        align-items: center;
        justify-content: space-between;
        grid-template-columns: auto auto;
        gap: 2rem;
    }

    &__text {
        p:nth-child(1) {
            font-size: 30px;
            font-weight: 600;
            color: var(--text-grey);
        }

        p:nth-child(2) {
            font-size: 18px;
            font-weight: 300;
            color: var(--text-grey);
        }
    }
}

// potential customers
.potcustomers {
    min-height: 50vh;
    height: auto;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--background-1);

    &__body {
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
        width: 90%;
        max-width: 1500px;
        margin-top: 4rem;
    }

    &__header {
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
        flex-direction: column;
        color: var(--text-grey);
        width: 60%;

        h1 {
            font-size: 30px;
            margin-bottom: .6rem;
        }

        p {
            font-size: 14px;
            text-align: center;
            width: 70%;
        }
    }

    &__cards {
        width: 95%;
        min-height: 30vh;
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 3rem;
        margin-top: 2rem;
    }

    &__card {
        height: 25rem;
        width: 25rem;
        overflow: hidden;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        position: relative;
        color: var(--text-grey);

        img {
            height: 100%;
            width: 100%;
        }
    }

    &__msgbox {
        height: 50%;
        width: 70%;
        position: absolute;
        z-index: 1;
        border-radius: 8px;
        bottom: -1rem;
        padding: 1.1rem;
        overflow: hidden;
        display: flex;
        align-items: baseline;
        flex-direction: column;
        justify-content: space-between;
        background-color: var(--background-2);


        p:nth-child(1) {
            font-size: 14px;
            max-height: 60%;
            overflow: hidden;
        }
    }

    &__readmore {
        height: 30px;
        width: 40%;
        font-size: 13px;
        color: var(--primary-color);
        gap: .5rem;
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: center;
        position: absolute;
        z-index: 2;
        bottom: 1rem;
        border-radius: 2rem;
        border: 1px solid var(--primary-color);

        &:hover {
            background-color: var(--primary-color);
            color: var(--background-1);
        }
    }

    &__footer {
        min-height: 20vh;
        height: 20vh;
        width: 100%;
        background-color: var(--background-2);
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    &__text {
        height: inherit;
        width: 60%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        font-size: 35px;
        color: var(--text-grey);
    }
}

// contact
.contact {
    min-height: 30vh;
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--primary-color);

    &__body {
        height: 100%;
        width: 100%;
        max-width: 1500px;
    }
}

